backend/k8s/deployer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployer-app
  namespace: ashapp
  labels:
    app: deployer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployer-app
  template:
    metadata:
      labels:
        app: deployer-app
    spec:
      containers:
      - name: deployer-app
        image: ashwanth01/deployer-app:latest
        ports:
        - containerPort: 5000
