backend/k8s/flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: ashapp
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: ashwanth01/flask-app:latest
        ports:
        - containerPort: 5000
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: docker-sock
          mountPath: /var/run/docker.sock
        - name: kube-bin
          mountPath: /usr/bin/docker
          subPath: docker
        - name: kube-bin
          mountPath: /usr/bin/kubectl
          subPath: kubectl
        - name: kubeconfig
          mountPath: /home/appuser/.kube
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
      - name: kube-bin
        hostPath:
          path: /usr/bin
      - name: kubeconfig
        hostPath:
          path: /home/ubuntu/.kube
