backend/k8s/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  namespace: ashapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: ashwanth01/ashapp-login:latest
        ports:
        - containerPort: 80
