backend/k8s/flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: ashapp
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31000
  type: NodePort
