backend/k8s/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  type: ClusterIP
  selector:
    app: login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
