backend/k8s/monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-monitor
  namespace: ashapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-monitor
  template:
    metadata:
      labels:
        app: flask-monitor
    spec:
      containers:
      - name: flask-monitor
        image: ashwanth01/flask-monitor:latest
        ports:
          - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-monitor
  namespace: ashapp
spec:
  selector:
    app: flask-monitor
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
      nodePort: 32000
  type: NodePort
